[package]
name = "meter2car"
version = "1.0.0"
edition = "2021"


[dependencies]
rppal = "^0.13"
json = "^0.12"
hex = "^0.4"
nom = "^7"
aes = "^0.8"
cipher = "^0.4"
hdlcparse = { git = "http://github.com/leifhelm/hdlcparse.git" }
url = "^2.2"
serde_json = "^1.0"
futures = "^0.3"

[dependencies.smart_meter]
git = "https://github.com/leifhelm/smart-meter-rs.git"
branch = "hdlc"

[dependencies.tokio]
version = "^1.0"
features = [ "full" ]

[dependencies.reqwest]
version = "^0.11"
features = [ "rustls", "json" ]
default-features = false

[dependencies.dlms_cosem]
git = "https://github.com/leifhelm/dlms-cosem-rs.git"
branch = "dev"
features = [ "std" ]

[dependencies.serialport]
version = "^4.2"
default-features = false

[patch."https://github.com/leifhelm/dlms-cosem-rs.git"]
dlms_cosem = { git = "https://github.com/leifhelm/dlms-cosem-rs.git?branch=data_link", branch = "dev" }
